# salsa-sc

./: .gitignore  Cargo.toml  build-reprod.sh  deploy-devnet.interaction.json  deploy-mainnet.interaction.json  deploy-reprod.sh  deploy.sh  upgrade-reprod-mainnet.sh  upgrade-reprod.sh  upgrade.sh
delegation-mock/: Cargo.toml
delegation-mock/meta/: Cargo.toml
delegation-mock/output/: delegation-mock.wasm
delegation-mock/src/: delegation.rs
delegation-mock/wasm/: Cargo.toml
delegation-mock/wasm/src/: lib.rs
go-tests/: go.mod  go.sum  main.go  parser.go
go-tests/helpers/: consts.go  functions.go  info.go  init.go  reader.go  tester.go  utils.go  vars.go
go-tests/oneDex/: oneDex.go
go-tests/salsaContract/: salsaContract.go
go-tests/xExchange/: pair.go
meta/: Cargo.toml
meta/src/: main.rs
old_tests/: test.rs
old_tests/contract_interactions/: heirs_test.rs  knights_test.rs  salsa_test.rs
onedex-mock/: Cargo.toml
onedex-mock/meta/: Cargo.toml
onedex-mock/src/: constants.rs  onedex.rs  proxy.rs  state.rs  view.rs
onedex-mock/wasm/: Cargo.toml
output/: salsa.abi.json  salsa.wasm
scenarios/: salsa.scen.json
src/: config.rs  consts.rs  delegation_proxy.rs  errors.rs  flash_loans.rs  heirs.rs  helpers.rs  knights.rs  liquidity.rs  onedex.rs  onedex_proxy.rs  providers.rs  salsa.rs  service.rs  storage.rs  wrapper_proxy.rs
src/common/: config.rs  consts.rs  errors.rs  mod.rs  storage_cache.rs
src/exchanges/: arbitrage.rs  lp.rs  lp_cache.rs  mod.rs  onedex.rs  onedex_cache.rs  xexchange.rs  xexchange_cache.rs  xstake.rs
src/proxies/: delegation_proxy.rs  mod.rs  onedex_proxy.rs  wrap_proxy.rs  xexchange_proxy.rs  xstake_proxy.rs
tests/: consts.rs  salsa_rust_test.rs  salsa_scenario_go_test.rs  salsa_scenario_rs_test.rs  salsa_tests.rs  salsa_v3_tests.rs  test.rs
tests/contract_interactions/: checks.rs  common.rs  delegation_interaction.rs  heirs_interactions.rs  heirs_test.rs  knights_interactions.rs  knights_test.rs  mod.rs  onedex_interactions.rs  providers_interactions.rs  salsa_interactions.rs  salsa_test.rs  service_interactions.rs  wrap_interactions.rs  xexchange_interactions.rs
tests/contract_setup/: mod.rs
tests/modules_tests/: arbitrage_tests.rs  knights_and_heirs_tests.rs  lp_tests.rs  mod.rs  providers_tests.rs  xstake_tests.rs
tests/setup/: mod.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
wrap-mock/: Cargo.toml
wrap-mock/meta/: Cargo.toml
wrap-mock/src/: wrap.rs
wrap-mock/wasm/: Cargo.toml
xexchange-mock/: Cargo.toml
xexchange-mock/meta/: Cargo.toml
xexchange-mock/src/: amm.rs  config.rs  consts.rs  errors.rs  fee.rs  liquidity_pool.rs  xexchange.rs
xexchange-mock/wasm/: Cargo.toml
xstake-mock/: Cargo.toml
xstake-mock/meta/: Cargo.toml
xstake-mock/src/: assertions.rs  config.rs  consts.rs  helpers.rs  storage.rs  (+2 more)
(+27 files in other folders)
