[package]
name = "salsa"
version = "0.0.3"
authors = [ "DrDelphi" ]
edition = "2021"
publish = false

[lib]
path = "src/salsa.rs"

[dev-dependencies]
num-bigint = "0.4.4"

[dependencies.multiversx-sc]
version = "0.47.4"

[dependencies.multiversx-sc-modules]
version = "0.47.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.47.4"

[dependencies]
hex-literal = "0.4.1"

[dependencies.delegation-mock]
path = "./delegation-mock"

[workspace]
members = [
    ".",
    "./meta",
    "delegation-mock",
    "delegation-mock/meta"
]
