[package]
name = "salsa"
version = "0.0.3"
authors = [ "DrDelphi" ]
edition = "2021"
publish = false

[lib]
path = "src/salsa.rs"

[dev-dependencies]
num-bigint = "0.4.4"

[dependencies.multiversx-sc]
version = "0.47.4"

[dependencies.multiversx-sc-modules]
version = "0.47.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.47.4"

[dependencies]
hex-literal = "0.4.1"

[dependencies.delegation-mock]
path = "./delegation-mock"

[dependencies.wrap-mock]
path = "./wrap-mock"

[dependencies.onedex-mock]
path = "./onedex-mock"

[dependencies.xexchange-mock]
path = "./xexchange-mock"

[dependencies.xstake-mock]
path = "./xstake-mock"

[workspace]
members = [
    ".",
    "./meta",
    "delegation-mock",
    "delegation-mock/meta",
    "wrap-mock",
    "wrap-mock/meta",
    "onedex-mock",
    "onedex-mock/meta",
    "xexchange-mock",
    "xexchange-mock/meta",
    "xstake-mock",
    "xstake-mock/meta"
]
