[package]
name = "salsa-wasm"
version = "0.0.3"
edition = "2021"
publish = false
authors = [ "DrDelphi" ]

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false
panic = "abort"

[dependencies.salsa]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.43.3"
